--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"],
-      "@components/*": ["./src/app/components/*"]
+      "@lib/*": ["./src/lib/*"],
+      "@components/*": ["./src/app/components/*"],
+      "@interfaces/*": ["./src/interfaces/*"],
+      "@/*": ["./src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
