--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@rehype-pretty/transformers": "^0.13.2",
     "class-variance-authority": "^0.7.0",
@@ -17,6 +18,7 @@
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
+    "next-intl": "^3.25.3",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
